--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.2.1",
+    "coveralls": "^3.0.2",
     "css-loader": "^2.1.0",
     "eslint": "^5.11.1",
     "eslint-config-airbnb": "^17.1.0",
