--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "start": "webpack-dev-server --mode development --open --hot",
     "bulid": "webpack --mode production",
     "lint": "eslint src",
-    "heroku-postbuild": "npm run build",
     "test": "jest",
     "test:cov": "jest --coverage --env='jsdom'",
-    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls"
+    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
+    "heroku-prebuild": "npm install",
+    "heroku-postbuild": "npm run build"
   },
   "author": "Atuhaire Jude innocent",
   "license": "MIT",
@@ -19,6 +20,7 @@
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
+    "axios": "^0.18.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
@@ -47,19 +49,21 @@
     "jquery": "^3.3.1",
     "jsdom": "^13.1.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "moxios": "^0.4.0",
     "node-sass": "^4.11.0",
     "popper.js": "^1.14.6",
     "prop-types": "^15.6.2",
     "puppeteer": "^1.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-redux": "^6.0.0",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
+    "sweetalert2": "^7.33.1",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14",
