--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
-    "bulid": "webpack --mode production",
+    "build": "webpack --mode production",
     "lint": "eslint src",
     "test": "jest",
     "test:cov": "jest --coverage --env='jsdom'",
